# macvmtop

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  mkdocs.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: CNAME  development.md  getting-started.md  index.md  install.md  install.sh  json.md  metrics.md  publishing.md  roadmap.md
src/: main.rs  model.rs  render.rs  sampler.rs
src/darwin/: mod.rs  native.c  native.h
